--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>&copy; 2021 Horia-Mihai Zamfir/p>
+              <p>&copy; 2021 Horia-Mihai Zamfir </p>
             </div>
           </div>
         </div>
